# blastgate

./: .gitignore  README.md
.github/workflows/: build-apk.yml
desktop/: Blastgate.spec  BlastgateGUI.spec  README.md  build.bat  diag_hub.py  pyproject.toml  requirements.txt
desktop/blastgate/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  logging_config.py
desktop/blastgate/controllers/: __init__.py  auto_controller.py
desktop/blastgate/gui/: __init__.py  app.py  utils.py
desktop/blastgate/gui/components/: __init__.py  animated_toggle.py  dropdown_menu.py  loading_spinner.py  rounded_tile.py
desktop/blastgate/gui/dialogs/: __init__.py  calibration.py  connect.py  node_detail.py  ota.py  settings.py  setup_wizard.py  wifi.py
desktop/blastgate/models/: config.py  node.py  status.py
desktop/blastgate/network/: __init__.py  client.py  discovery.py  engine.py  ota.py  protocol.py
desktop/blastgate/utils/: __init__.py  errors.py  firewall.py  helpers.py  validators.py
desktop/docs/: architecture.md
desktop/tests/: __init__.py  test_config.py
desktop/tests/test_controllers/: test_auto_controller.py
desktop/tests/test_models/: __init__.py  test_node.py  test_status.py
desktop/tests/test_network/: __init__.py  test_protocol.py
desktop/tests/test_utils/: test_helpers.py  test_validators.py
firmware/hub-wt32/: erase_flash.py  platformio.ini
firmware/node-esp32/: platformio.ini
mobile/: README.md  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
releases/: manifest.json
(+25 files in other folders)
